force-app/main/default/objects/Pricing_Rule__mdt/Pricing_Rule__mdt.object-meta.xml
<CustomObject>
    <label>Pricing Rule</label>
    <pluralLabel>Pricing Rules</pluralLabel>
    <description></description>
</CustomObject>