force-app/main/default/objects/Pricing_Rule__mdt/fields/Discount_Percent__c.field-meta.xml
<CustomField>
    <fullName>Discount_Percent__c</fullName>
    <label>Discount Percent</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>2</scale>
    <description>Discount Percent</description>
</CustomField>