force-app/main/default/objects/Pricing_Rule__mdt/fields/Min_Amount__c.field-meta.xml
<CustomField>
    <fullName>Min_Amount__c</fullName>
    <label>Min Amount</label>
    <type>Number</type>
    <precision>12</precision>
    <scale>2</scale>
    <description>Min Amount</description>
</CustomField>