force-app/main/default/objects/Pricing_Rule__mdt/fields/Segment__c.field-meta.xml
<CustomField>
    <fullName>Segment__c</fullName>
    <label>Segment</label>
    <type>Text</type>
    <length>40</length>
    <description>Segment</description>
</CustomField>